# piper

./: .clang-format  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  test.cpp
src/example-subdirectory/: CMakeLists.txt  example-test.cpp  example.cpp
src/example-subdirectory/include/example-subdirectory/: example.h
src/example-subdirectory/tests/: example-test.cpp
src/piper/: CMakeLists.txt  main.cpp
src/test/: CMakeLists.txt
tools/agnostic/git-hooks/: pre-commit.hook
